--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class="clear"></div>
 			<div class="yellow-box1">
-				<p class="box2-p">TEXT EXAMPLE</p>
+				<p class="box2-p">text example</p>
 			</div>
 		</div>
 	</div>
